      insufficient checking that you could sell both quantities.  This
	  bug existed for a while but never showed up because of the bug
	  with multiple sells of the same item which I fixed a few weeks ago.
   -- Changed MOVE and SAIL so that if the unit runs out of movement
      points, the remaining moves are added to the front of the TURN
      queue.  This allows caravans using @TURN to work properly despite
      weather changing move costs.  Also fixed a bug where a single
      @TURN command would be lost because of a pointer being reused.
   -- Modified TURN/ENDTURN processing to cope with arbitrarily deep
      TURN and FORM nesting, and cleaned up the error handling.
   -- Moved the correlation between faction points and what they give
      you from being hardcoded in extra.cpp to an array in rules.cpp.
   -- Small fix so that all items (even non-give) can actually be discarded.
   -- Added check that there is actually an active unit when parsing TURN
      and ENDTURN orders.  Fixes segfault.
   -- Fixed bugs in orders checker where it was trying to do a
      unit->Error() where it should have been doing ParseError() since
      unit isn't valid in the orders checker.
   -- Applied patch from Jan Rietema <ravanrooke@yahoo.de> providing a large
      amount more configurability in the world generation process.
   -- Changed template generation to understand the terrain types again
      after the previous fix.
   -- Added gamedefs to control the minimum and maximum amounts of food
      that a unit requires for maintenance, and the value of food for
      maintenance.
   -- Added a processed food item (FOOD), cooking skill and Create Food
      spell to go with the possibility of requiring food for upkeep.
      Made food buyable in all town markets.
   -- Made it so that shield items didn't need to be PREPARED in a game with
      USE_PREPARE_COMMAND set and verified that non-prepared items got
	  returned.