@@ -533,3 +533,5 @@ Changes from 4.0.9 -> 4.0.10
    -- Made it so that shield items didn't need to be PREPARED in a game with
       USE_PREPARE_COMMAND set and verified that non-prepared items got
 	  returned.
+   -- Fixed display of hits/regen to show unit number and creature in unit
+      which took the damage.
